statefulset/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    yawol.stackit.cloud/replicas: "2"
    yawol.stackit.cloud/tcpProxyProtocol: "true"
  name: keycloak-lb
spec:
  selector:
    app: keycloak
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: http
      appProtocol: http
    - name: "https"
      protocol: TCP
      port: 443
      targetPort: https
      appProtocol: https  
  type: LoadBalancer


# refer to: https://docs.stackit.cloud/stackit/en/usage-of-loadbalancers-with-kubernetes-service-28476594.html
